--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@
 .initial .cell:hover { cursor: pointer; background: lightgray; }
 .initial .cell.on:hover { cursor: pointer; background: #444; }
 
+.cool-rule { margin-left: .25em; }
+
 .iteration-count { font-weight: bold; }
 
 .height-34px { height: 34px; line-height: 34px; }
